cluster/kubernetes/dawarich/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-app
  namespace: dawarich
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: dawarich-app
  replicas: 1
  template:
    metadata:
      labels:
        app: dawarich-app
    spec:
      containers:
        - args:
            - bin/rails
            - server
            - -p
            - "3000"
            - -b
            - "::"
          command:
            - web-entrypoint.sh
          image: freikin/dawarich:0.22.0
          name: dawarich-app
          ports:
            - containerPort: 3000
              protocol: TCP
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /var/app/public
              name: dawarich-public
            - mountPath: /var/app/tmp/imports/watched
              name: dawarich-watched
      volumes:
        - name: dawarich-public
          persistentVolumeClaim:
            claimName: dawarich-public
        - name: dawarich-watched
          persistentVolumeClaim:
            claimName: dawarich-watched
