cluster/kubernetes/dawarich/photon.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photon
  namespace: dawarich
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: photon
  replicas: 1
  template:
    metadata:
      labels:
        app: photon
    spec:
      containers:
        command:
          - /bin/sh
          - -c
          - |
            cd /photon
            wget https://github.com/komoot/photon/releases/download/0.6.0/photon-0.6.0.jar \
              -O /photon/photon.jar
            java -jar photon.jar

        image: openjdk:24-slim-bullseye
        name: photon
        ports:
          - containerPort: 2322
            protocol: TCP
        volumeMounts:
          - mountPath: /photon/photon_data
            name: photon-data
      volumes:
        - name: photon-data
          persistentVolumeClaim:
            claimName: photon-data
