cluster/kubernetes/dawarich/sidekiq.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dawarich-sidekiq
  namespace: dawarich
  annotations:
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: dawarich-sidekiq
  replicas: 1
  template:
    metadata:
      labels:
        app: dawarich-sidekiq
    spec:
      containers:
        - args:
            - bundle
            - exec
            - sidekiq
          command:
            - sidekiq-entrypoint.sh
          image: freikin/dawarich:latest
          name: dawarich-sidekiq
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/app/public
              name: dawarich-public
            - mountPath: /var/app/tmp/imports/watched
              name: dawarich-watched
      volumes:
        - name: dawarich-public
          persistentVolumeClaim:
            claimName: dawarich-public
        - name: dawarich-watched
          persistentVolumeClaim:
            claimName: dawarich-watched
