cluster/kubernetes/dawarich/photon.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dawarich
  name: photon
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2322
  selector:
    app: photon
