cluster/kubernetes/dawarich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dawarich-app
  namespace: dawarich
spec:
  ports:
    - name: "app"
      port: 3000
      targetPort: 3000
  selector:
    app: dawarich-app
