cluster/kubernetes/dawarich/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dawarich-app
  namespace: dawarich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $http_host;
spec:
  ingressClassName: nginx
  rules:
    - host: dawarich.internal.anurag.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dawarich-app
                port:
                  number: 3000
  tls:
    - secretName: dawarich-internal-tls
      hosts:
        - dawarich.internal.anurag.sh
